[package]
name = "mint_core"
version = "0.3.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
dirs = "6.0.0"
indicatif = "0.18"
rayon = "1.7"

