[package]
name = "mint_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "stream", "rustls-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive", "env"] }
anyhow = "1.0"
dirs = "6.0.0"
indicatif = "0.18"
rayon = "1.7"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"
num_cpus = "1.16"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
